--- a/app/globals.scss
+++ b/app/globals.scss
@@ -184,6 +184,7 @@
 
   // Styles personnalisés pour rendre le texte plus gros et aéré
   & p,
+  & li,
   &.prose-xl p,
   &.prose-lg p,
   &.prose-2xl p {
@@ -217,7 +218,7 @@
   }
 
   & h2 {
-    font-size: 2rem;
+    font-size: 2.3rem;
     line-height: 1.3;
     margin-top: 2rem;
     margin-bottom: 1.25rem;
