--- a/public/assets/css/theme/theme-five.min.purge.scss
+++ b/public/assets/css/theme/theme-five.min.purge.scss
@@ -6162,6 +6162,9 @@
   .m-4 {
     margin: 2rem !important;
   }
+  .m-10 {
+    margin: 0rem 2rem 8rem 0rem !important;
+  }
   .m-auto {
     margin: auto !important;
   }
